--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
      text-gray-500 transition-all hover:border-[#F7AB0A]/40 hover:border hover:text-[#F7AB0A]/40;
   }
   .contactInput{
-    @apply outline-none bg-slate-400/10 rounded-sm border-b px-4 py-3 lg:px-6 lg:py-4 
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-4 py-3 sm:px-5 sm:py-6 lg:px-6 lg:py-4 
     border-[#242424] text-gray-500 placeholder-gray-500 
     transition-all focus:border-[#F7AB0A]/40
     focus:text-[#F7AB0A]/40
